apps/base/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        nodeclass: general
      containers:
        - env:
            - name: TZ
              value: America/Denver
          image: linuxserver/sonarr:latest
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: sonarr-config
            - mountPath: /media
              name: media
            - mountPath: /data
              name: downloads
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
