apps/base/media/sonarr/service-4k.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-4k
  labels:
    app: sonarr-4k
spec:
  selector:
    app: sonarr-4k
  ports:
    - name: http
      port: 8989
      protocol: TCP
      targetPort: http
