apps/base/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
      protocol: TCP
      targetPort: http
